<resources>
    <string name="app_name">Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_gridview">NoScrollGridView</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="title_activity_load_more">LoadMoreActivity</string>
    <string name="str_loadmore">ListView加载更多</string>
    <string name="title_activity_thread_pool">ThreadPoolActivity</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="str_volley_okhttp"><![CDATA[Volley&OkHttp]]></string>
    <string name="title_activity_callback">CallbackActivity</string>
    <string name="title_activity_event_bus">EventBusActivity</string>
    <string name="title_activity_bitmaps">BitmapsActivity</string>
    <string name="str_bitmap">Bitmaps高效加载</string>
    <string name="title_activity_bus">BusActivity</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="str_recycler">RecyclerView</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="str_mvp">MVP设计模式</string>
    <string name="title_activity_rx_android">RxAndroidActivity</string>
    <string name="str_rx_android">RxAndroid响应式编程</string>
</resources>
