<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DemoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/demo_gridview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_gridview" />

            <Button
                android:id="@+id/demo_loadmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_loadmore" />

            <Button
                android:id="@+id/demo_volley_okhttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_volley_okhttp" />

            <Button
                android:id="@+id/demo_bitmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_bitmap" />

            <Button
                android:id="@+id/demo_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_recycler" />

            <Button
                android:id="@+id/demo_mvp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mvp" />
            <Button
                android:id="@+id/demo_rx_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rx_android" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
